--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,22 +1,22 @@
 FROM fedora:32
 MAINTAINER lburgazzoli
 
-ARG DOCKER_USER
-ARG DOCKER_USER_GID
-ARG DOCKER_USER_UID
+ARG CONTAINER_USER
+ARG CONTAINER_USER_GID
+ARG CONTAINER_USER_UID
 
-ENV DOCKER_USER_HOME  /home/$DOCKER_USER
-ENV HOME              $DOCKER_USER_HOME
+ENV CONTAINER_USER_HOME  /home/$CONTAINER_USER
+ENV HOME                 $CONTAINER_USER_HOME
 RUN \
     groupadd \
-        --gid $DOCKER_USER_GID \
-        $DOCKER_USER \
+        --gid $CONTAINER_USER_GID \
+        $CONTAINER_USER \
     && useradd \
         --create-home \
-        --home-dir $DOCKER_USER_HOME \
-        --uid $DOCKER_USER_GID \
-        --gid $DOCKER_USER_UID \
-        $DOCKER_USER \
+        --home-dir $CONTAINER_USER_HOME \
+        --uid $CONTAINER_USER_GID \
+        --gid $CONTAINER_USER_UID \
+        $CONTAINER_USER \
     && rm -f \
         /etc/yum.repos.d/fedora-cisco-openh264.repo \
         /etc/yum.repos.d/fedora-updates-testing.repo \
