--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,10 @@
 {    
   "build": {
-    "dockerfile": "Dockerfile"
+    "dockerfile": "Dockerfile",
+    "args": {
+      "CONTAINER_USER": "lburgazzoli",
+      "CONTAINER_USER_UID": "1000",
+      "CONTAINER_USER_GID": "1000",
+    }
   }
 }
