--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -16,18 +16,5 @@ RUN \
         --home-dir $CONTAINER_USER_HOME \
         --uid $CONTAINER_USER_GID \
         --gid $CONTAINER_USER_UID \
-        $CONTAINER_USER \
-    && rm -f \
-        /etc/yum.repos.d/fedora-cisco-openh264.repo \
-        /etc/yum.repos.d/fedora-updates-testing.repo \
-    && dnf --assumeyes --refresh --verbose --allowerasing update \
-    && dnf --assumeyes --verbose --allowerasing install \
-        dnf-plugins-core \
-        curl \
-        unzip \
-        wget \
-        tar \
-        bzip2 \
-        xz \
-    && dnf --assumeyes --verbose clean all
+        $CONTAINER_USER 
 
